# douluodalu-liehunshijie

./: .gitignore  CMakeLists.txt  capture_window.cpp  capture_window.h  douluopage.cpp  douluopage.h  douluopage.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  ocr_simple.cpp  ocr_simple.h  ocr_tesseract.cpp  ocr_tesseract.h  virtualrealm.cpp  virtualrealm.h  window_target.cpp  window_target.h
